--- a/index.html
+++ b/index.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="utf-8">
+    <title>TinDog</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+
+    <!-- CSS Stylesheets -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+          integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-  <section id="title">
+<section id="title">
+    <div class="container-fluid">
+        <!-- Nav Bar -->
 
-    <!-- Nav Bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#">tindog</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Download</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
+        <!-- Title -->
 
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h1 id="main-title">Meet new and interesting dogs nearby.</h1>
+                <button type="button" class="btn btn-lg btn-dark download-button"><span class="fa-brands fa-apple"></span> Download
+                </button>
+                <button type="button" class="btn btn-lg btn-outline-light download-button"><span
+                        class="fa-brands fa-google-play"></span> Download
+                </button>
 
-
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+            </div>
+        </div>
     </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
 
-  </section>
+</section>
 
 
-  <!-- Features -->
+<!-- Features -->
 
-  <section id="features">
+<section id="features">
 
     <h3>Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
@@ -43,12 +85,12 @@
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
 
-  </section>
+</section>
 
 
-  <!-- Testimonials -->
+<!-- Testimonials -->
 
-  <section id="testimonials">
+<section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
     <img src="images/dog-img.jpg" alt="dog-profile">
@@ -58,23 +100,23 @@
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
 
-  </section>
+</section>
 
 
-  <!-- Press -->
+<!-- Press -->
 
-  <section id="press">
+<section id="press">
     <img src="images/techcrunch.png" alt="tc-logo">
     <img src="images/tnw.png" alt="tnw-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo">
     <img src="images/mashable.png" alt="mashable-logo">
 
-  </section>
+</section>
 
 
-  <!-- Pricing -->
+<!-- Pricing -->
 
-  <section id="pricing">
+<section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -104,28 +146,27 @@
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
 
-  </section>
+</section>
 
 
-  <!-- Call to Action -->
+<!-- Call to Action -->
 
-  <section id="cta">
+<section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
-  </section>
+</section>
 
 
-  <!-- Footer -->
+<!-- Footer -->
 
-  <footer id="footer">
+<footer id="footer">
 
     <p>© Copyright TinDog</p>
 
-  </footer>
-
+</footer>
 
 </body>
 
