--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h1 id="main-title">Meet new and interesting dogs nearby.</h1>
-                <button type="button" class="btn btn-lg btn-dark download-button"><span class="fa-brands fa-apple"></span> Download
+                <button type="button" class="btn btn-lg btn-dark download-button"><span
+                        class="fa-brands fa-apple"></span> Download
                 </button>
                 <button type="button" class="btn btn-lg btn-outline-light download-button"><span
                         class="fa-brands fa-google-play"></span> Download
@@ -75,15 +76,26 @@
 <!-- Features -->
 
 <section id="features">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4 col-md-12">
+                <i class="fa-solid fa-circle-check features-icons fa-4x"></i>
+                <h3 class="features-title-h3">Easy to use.</h3>
+                <p class="features-title-p">So easy to use, even your dog could do it.</p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <i class="fa-solid fa-bullseye features-icons fa-4x"></i>
+                <h3 class="features-title-h3">Elite Clientele</h3>
+                <p class="features-title-p">We have all the dogs, the greatest dogs.</p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <i class="fa-solid fa-heart features-icons fa-4x"></i>
+                <h3 class="features-title-h3">Guaranteed to work.</h3>
+                <p class="features-title-p">Find the love of your dog's life or your money back.</p>
+            </div>
+        </div>
+    </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
 
 </section>
 
@@ -92,13 +104,29 @@
 
 <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <div id="carouselTestimonials" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+                <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+                <em>Pebbles, New York</em>
+            </div>
+            <div class="carousel-item">
+                <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love
+                    of their life. I think.</h2>
+                <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+                <em>Beverly, Illinois</em>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
 </section>
 
@@ -106,10 +134,10 @@
 <!-- Press -->
 
 <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-image" src="images/TechCrunch.png" alt="tc-logo">
+    <img class="press-image" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-image" src="images/mashable.png" alt="mashable-logo">
 
 </section>
 
@@ -117,35 +145,58 @@
 <!-- Pricing -->
 
 <section id="pricing">
-
+ <div class="container-fluid">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row">
+        <div class="pricing-column col-lg-4 col-md-6 col-xs-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Chihuahua</h3>
+                </div>
+                <div class="card-body">
+                    <h2>Free</h2>
+                    <p>5 Matches Per Day</p>
+                    <p>10 Messages Per Day</p>
+                    <p>Unlimited App Usage</p>
+                    <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
+                </div>
+            </div>
+        </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+        <div class="pricing-column col-lg-4 col-md-6 col-xs-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Labrador</h3>
+                </div>
+                <div class="card-body">
+                    <h2>$49 / mo</h2>
+                    <p>Unlimited Matches</p>
+                    <p>Unlimited Messages</p>
+                    <p>Unlimited App Usage</p>
+                    <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                </div>
+            </div>
+        </div>
 
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+        <div class="pricing-column col-lg-4 col-md-12 col-xs-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Mastiff</h3>
+                </div>
+                <div class="card-body">
+                    <h2>$99 / mo</h2>
+                    <p>Pirority Listing</p>
+                    <p>Unlimited Matches</p>
+                    <p>Unlimited Messages</p>
+                    <p>Unlimited App Usage</p>
+                    <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>
 </section>
 
 
@@ -164,7 +215,7 @@
 
 <footer id="footer">
 
-    <p>© Copyright TinDog</p>
+    <p>&copy; Copyright TinDog</p>
 
 </footer>
 
