--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 
 <body>
 
-<section id="title">
+<section class="colored-section" id="title">
     <div class="container-fluid">
         <!-- Nav Bar -->
-
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">tindog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,79 +38,71 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#footer">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Download</a>
+                        <a class="nav-link" href="#cta">Download</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <!-- Title -->
-
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <h1 id="main-title">Meet new and interesting dogs nearby.</h1>
+                <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
                 <button type="button" class="btn btn-lg btn-dark download-button"><span
                         class="fa-brands fa-apple"></span> Download
                 </button>
                 <button type="button" class="btn btn-lg btn-outline-light download-button"><span
                         class="fa-brands fa-google-play"></span> Download
                 </button>
-
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
             </div>
         </div>
     </div>
-
 </section>
 
-
 <!-- Features -->
-
 <section id="features">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-4 col-md-12">
                 <i class="fa-solid fa-circle-check features-icons fa-4x"></i>
-                <h3 class="features-title-h3">Easy to use.</h3>
+                <h3 class="features-title">Easy to use.</h3>
                 <p class="features-title-p">So easy to use, even your dog could do it.</p>
             </div>
             <div class="col-lg-4 col-md-12">
                 <i class="fa-solid fa-bullseye features-icons fa-4x"></i>
-                <h3 class="features-title-h3">Elite Clientele</h3>
+                <h3 class="features-title">Elite Clientele</h3>
                 <p class="features-title-p">We have all the dogs, the greatest dogs.</p>
             </div>
             <div class="col-lg-4 col-md-12">
                 <i class="fa-solid fa-heart features-icons fa-4x"></i>
-                <h3 class="features-title-h3">Guaranteed to work.</h3>
+                <h3 class="features-title">Guaranteed to work.</h3>
                 <p class="features-title-p">Find the love of your dog's life or your money back.</p>
             </div>
         </div>
     </div>
-
-
 </section>
 
-
 <!-- Testimonials -->
-
-<section id="testimonials">
+<section class="colored-section" id="testimonials">
 
     <div id="carouselTestimonials" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <div class="carousel-item active container-fluid">
+                <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi
+                    on TinDog. Woof.</h2>
                 <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
                 <em>Pebbles, New York</em>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item container-fluid">
                 <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love
                     of their life. I think.</h2>
                 <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
@@ -130,10 +121,8 @@
 
 </section>
 
-
 <!-- Press -->
-
-<section id="press">
+<section class="colored-section" id="press">
     <img class="press-image" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
     <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -141,84 +130,89 @@
 
 </section>
 
-
 <!-- Pricing -->
+<section class="white-section" id="pricing">
+    <div class="container-fluid">
+        <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+        <p>Simple and affordable price plans for your and your dog.</p>
 
-<section id="pricing">
- <div class="container-fluid">
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-
-    <div class="row">
-        <div class="pricing-column col-lg-4 col-md-6 col-xs-12">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Chihuahua</h3>
-                </div>
-                <div class="card-body">
-                    <h2>Free</h2>
-                    <p>5 Matches Per Day</p>
-                    <p>10 Messages Per Day</p>
-                    <p>Unlimited App Usage</p>
-                    <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
+        <div class="row">
+            <div class="pricing-column col-lg-4 col-md-6 col-xs-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Chihuahua</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2 class="price-text">Free</h2>
+                        <p>5 Matches Per Day</p>
+                        <p>10 Messages Per Day</p>
+                        <p>Unlimited App Usage</p>
+                        <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="pricing-column col-lg-4 col-md-6 col-xs-12">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Labrador</h3>
-                </div>
-                <div class="card-body">
-                    <h2>$49 / mo</h2>
-                    <p>Unlimited Matches</p>
-                    <p>Unlimited Messages</p>
-                    <p>Unlimited App Usage</p>
-                    <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+            <div class="pricing-column col-lg-4 col-md-6 col-xs-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Labrador</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2 class="price-text">$49 / mo</h2>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="pricing-column col-lg-4 col-md-12 col-xs-12">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Mastiff</h3>
-                </div>
-                <div class="card-body">
-                    <h2>$99 / mo</h2>
-                    <p>Pirority Listing</p>
-                    <p>Unlimited Matches</p>
-                    <p>Unlimited Messages</p>
-                    <p>Unlimited App Usage</p>
-                    <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+            <div class="pricing-column col-lg-4 col-md-12 col-xs-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Mastiff</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2 class="price-text">$99 / mo</h2>
+                        <p>Pirority Listing</p>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
- </div>
 </section>
-
 
 <!-- Call to Action -->
+<section class="colored-section" id="cta">
+    <div class="container-fluid">
+        <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class="btn btn-lg btn-dark download-button"><span
+                class="fa-brands fa-apple"></span> Download
+        </button>
+        <button type="button" class="btn btn-lg btn-light download-button"><span
+                class="fa-brands fa-google-play"></span> Download
+        </button>
 
-<section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    </div>
 </section>
 
-
 <!-- Footer -->
-
-<footer id="footer">
-
-    <p>&copy; Copyright TinDog</p>
-
+<footer class="white-section" id="footer">
+    <div class="container-fluid">
+        <i class="social-icon fab fa-facebook-f"></i>
+        <i class="social-icon fab fa-twitter"></i>
+        <i class="social-icon fab fa-instagram"></i>
+        <i class="social-icon fa-solid fa-envelope"></i>
+        <p>&copy; Copyright TinDog</p>
+    </div>
 </footer>
 
 </body>
 
 </html>
+
+
